# earnest

./: .gitmodules  CMakeLists.txt
include/earnest/: db-inl.h  db.h  db_errc.h  fd.h  isolation.h  sequence.h  shared_resource_allocator.h  tree-inl.h  tree.h  tree_error.h  tx_aware_data.h  tx_mode.h  txfile-inl.h  txfile.h
include/earnest/detail/: allocated_buffer.h  allocated_object.h  buffered_read_stream_at.h  buffered_write_stream_at.h  cheap_fn_ref.h  clamp_buffer.h  closeable_transaction.h  commit_manager-inl.h  commit_manager.h  commit_manager_impl-inl.h  commit_manager_impl.h  completion_barrier.h  completion_wrapper.h  concat_buffer.h  db_cache.h  export_.h  layout_domain.h  locked_ptr.h  replacement_map-inl.h  replacement_map.h  stop_continue.h  tree_cfg.h  tree_page-inl.h  tree_page.h  tree_page_leaf_elems-inl.h  tree_page_leaf_elems.h  tree_spec.h  tx_op-inl.h  tx_op.h  tx_sequencer.h  txfile_allocator-inl.h  txfile_allocator.h  txfile_allocator_log.h  unique_alloc_ptr.h  wal-inl.h  wal.h  wal2-inl.h  wal2.h
include/earnest/detail/tree/: augmented_page_ref.h  branch-inl.h  branch.h  cfg.h  fwd.h  key_type.h  leaf-inl.h  leaf.h  leaf_iterator-inl.h  leaf_iterator.h  (+11 more)
modules/: CMakeLists.txt
modules/aio_kqueue/: kqueue_aio.cc
modules/aio_kqueue/include/earnest/detail/aio/: kqueue_aio.h
modules/asio_aio/: CMakeLists.txt
modules/asio_aio/aio/: CMakeLists.txt
modules/asio_aio/aio/include/earnest/detail/aio/: aio_reactor.h
modules/asio_aio/aio_shared/: aio_op.cc  aio_op_list.cc  flush_op.cc
modules/asio_aio/aio_shared/include/earnest/detail/aio/: aio_op.h  aio_op_list.h  buffer_holder.h  flush_op.h  operation_impl.h
modules/asio_aio/kqueue/: kqueue_aio.cc  kqueue_fd.cc
modules/asio_aio/kqueue/include/earnest/detail/aio/: asio.h  kqueue_aio.h  kqueue_fd.h
modules/asio_aio/synchronous/: CMakeLists.txt
modules/asio_aio/synchronous/include/earnest/detail/aio/: synchronous_reactor.h
modules/asio_util/: CMakeLists.txt
modules/asio_util/include/earnest/: asio_context.h
modules/asio_util/include/earnest/detail/: asio_cycle_ptr.h  asio_execution_scheduler.h  buffered_readstream_adapter.h  byte_positional_stream.h  byte_stream.h  completion_barrier.h  completion_handler_fun.h  completion_wrapper.h  deferred_on_executor.h  err_deferred.h  fanout.h  fanout_barrier.h  forward_deferred.h  handler_traits.h  monitor.h  move_only_function.h  positional_stream_adapter.h  semaphore.h  type_erased_handler.h
modules/asio_util/tests/: completion_handler_fun.cc  completion_wrapper.cc  monitor.cc
modules/base_aio/: lio_op.cc
modules/base_aio/include/earnest/detail/aio/: lio_op.h
modules/db/: CMakeLists.txt
modules/db/include/earnest/: byte_span_printer.h  db.h  db_address.h  db_cache.h  db_error.h  raw_db.h
modules/db/include/earnest/detail/: bplus_tree.h  bplus_tree_page.h  file_grow_allocator.h
modules/db/tests/: bplus_tree.cc  db_cache.cc
modules/execution/: CMakeLists.txt
modules/execution/include/earnest/: blocking_scheduler.h  execution.h  execution_io.h  execution_util.h  fixed_vector.h  move_only_function.h  stop_token.h  strand.h
modules/execution/tests/: execution.cc  execution_io.cc  execution_util.cc  fake_scheduler.h  senders.h  strand.cc  temporary_file.cc  temporary_file.h
modules/io/: CMakeLists.txt
modules/io/include/earnest/: dir.h  fd.h  open_mode.h
modules/io/src/: dir.cc  fd.cc
modules/util/: CMakeLists.txt
modules/util/include/earnest/detail/: adjecent_find_last.h  array_cat.h  constexpr_rounding.h  constexpr_sum.h  hash_combine.h  move_only_function.h  on_scope_exit.h  overload.h  prom_allocator.h  tracking_allocator.h
modules/util/tests/: adjecent_find_last.cc  array_cat.cc  constexpr_sum.cc
modules/wal/: CMakeLists.txt
modules/wal/include/earnest/: file_db.h  file_db_error.h  file_id.h  isolation.h  tx_mode.h  wal_error.h
modules/wal/include/earnest/detail/: fdb_logger.h  file_recover_state.h  logger.h  namespace_map.h  replacement_map.h  replacement_map.ii  replacement_map_reader.h  wal_file.h  wal_file.ii  wal_file_entry.h  wal_file_entry.ii  wal_flusher.h  wal_logger.h  wal_records.h
modules/wal/src/: replacement_map.cc  wal_file.cc  wal_file_entry.cc
modules/wal/tests/: file_db.cc  file_db.h  file_db_apply.cc  file_db_apply_reopen.cc  file_db_create_file_db.cc  file_db_open_file_db.cc  file_db_tx.cc  file_db_tx_commit.cc  file_db_tx_file_contents.cc  replacement_map.cc  tx_mode.cc  wal.cc  wal_file.cc  wal_file.h  wal_file_bad_files_are_unrecoverable_if_they_were_marked_ready.cc  wal_file_can_recover_from_interrupted_rollover.cc  wal_file_create_wal.cc  wal_file_entry.cc  wal_file_open_with_gaps.cc  wal_file_recovery.cc  wal_file_reread_wal.cc  wal_file_rollover.cc  wal_file_write.cc
modules/wal/tests/wal_file_entries/: sealed_0
modules/wal/tests/wal_source/: version_0
modules/xdr/: CMakeLists.txt
modules/xdr/include/earnest/: xdr.h  xdr.ii
modules/xdr/tests/: byte_stream.h  xdr.cc  xdr_bool.cc  xdr_bytes.cc  xdr_collection.cc  xdr_constant.cc  xdr_numeric.cc  xdr_optional.cc  xdr_padding.cc  xdr_processor.cc  xdr_tuple.cc  xdr_variant.cc
modules/xdr_v2/: CMakeLists.txt
modules/xdr_v2/include/earnest/: xdr.h  xdr_v2.h
modules/xdr_v2/tests/: ascii_string.cc  buffer.cc  buffer.h  collection.cc  constant.cc  main.cc  manual.cc  optional.cc  uint16.cc  uint32.cc  uint64.cc  uint8.cc  variant.cc  xdr.cc
src/: db.cc  db_errc.cc  fd.cc  sequence.cc  tree.cc  tree_error.cc  tx_aware_data.cc  txfile.cc
src/detail/: commit_manager.cc  commit_manager_impl.cc  db_cache.cc  layout_domain.cc  replacement_map.cc  tree_cfg.cc  tree_page.cc  tree_page_leaf_elems.cc  tx_op.cc  tx_sequencer.cc  txfile_allocator.cc  txfile_allocator_log.cc  wal.cc  wal2.cc
src/detail/tree/: augmented_page_ref.cc  branch.cc  cfg.cc  key_type.cc  leaf.cc  leaf_iterator.cc  loader.cc  loader_impl.cc  ops.cc  page.cc  tree.cc  tx_aware_value_type.cc  value_type.cc
tests/: CMakeLists.txt  commit_manager_impl.cc  print.h  replacement_map.cc  sequence.cc  tree.cc  tx_mode.cc  txfile.cc  wal_record.cc  wal_region.cc
